# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added SPNEGO authentication supporting Windows 7 and Windows 2008 to
  the smb library. [Patrik Karlsson]

o Fixed an error that occurred when scanning certain addresses like
  192.168.0.0 on Windows XP:
    get_srcaddr: can't connect socket: The requested address is not valid in its context.
    nexthost: failed to determine route to 10.80.0.0
  [David Fifield]

o [NSE] Changed http-brute so that it works against the root path
  ("/") by default rather than always requiring the http-brute.path
  script argument. [Fyodor]

o [NSE] Applied patch from Daniel Miller that fixes bug in several scripts and
  libraries http://seclists.org/nmap-dev/2012/q2/593 [Daniel Miller]

o [NSE] Added the script smb-ls that lists files on SMB shares and produces
  output similar to the dir command on Windows. [Patrik Karlsson]

o Fixed a bug that caused Nmap to fail to find any network interface when
  at least one of them is in the monitor mode. The fix was to define the
  ARP_HRD_IEEE80211_RADIOTAP 802.11 radiotap header identifier in the
  libdnet-stripped code. Network interfaces that are in this mode are used
  by radiotap for 802.11 frame injection and reception. The bug was
  reported by Tom Eichstaedt and Henri Doreau.
  http://seclists.org/nmap-dev/2012/q2/449
  http://seclists.org/nmap-dev/2012/q2/478
  [Djalal Harouni, Henri Doreau]

o [Zenmap] Added Italian translation by Francesco Tombolini.

o [NSE] Added the script eppc-enum-processes that enumerates active
  applications, their PID and the UID under which they run through the Apple
  Remote Event protocol. [Patrik Karlsson]

o [NSE] Added the Internet Storage Name Service (iSNS) library and the
  isns-info script that lists information about portals and iSCSI devices.
  [Patrik Karlsson]

o [NSE] Added rmi-vuln-classloader which scans for machines vulnerable to
  remote class loading. [Aleksandar Nikolic]
